--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Document</title>
     <link rel="stylesheet" href="css\style.css"> 
 </head>
 <body>
-    
+    <nav>
+        <header>
+            <div class="logo-icon"></div>
+        </header>
+        <section class="nav-container">
+            <a class="nav-item">Home</a>
+            <a class="nav-item">Our Package</a>
+            <a class="nav-item">Call Us</a>
+        </section>
+    </nav>
 </body>
 </html>
