--- a/index.html
+++ b/index.html
@@ -17,5 +17,34 @@
             <a class="nav-item">Call Us</a>
         </section>
     </nav>
+
+    <main>
+        <article class="main-title">
+            <header>
+                <h1>Your Trusted Travel Agent</h1>
+            </header>
+            <p>Your happness is our happines.</p>
+        </article>
+        <section class="main-content">
+            <article class="main-content-item">
+                <div class="main-content-banner">
+
+                </div>
+                <div class="main-item">
+                    <div class="item-icon">
+
+                    </div>
+                    <div>
+                        <h3>Lorem Ipsum Dolor</h3>
+                        <p>Lorem Ipsum Dolor</p>
+                    </div>
+                </div>
+            </article>
+            <form class="main-content-item">
+                <input type="text"/>
+                <button type="button">Submit</button>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
