--- a/index.html
+++ b/index.html
@@ -17,5 +17,25 @@
             <a class="nav-item">Call Us</a>
         </section>
     </nav>
+
+    <main>
+        <article class="main-title">
+            <header>
+                <h1>Your Trusted Travel Agent</h1>
+            </header>
+            <p>Your happness is our happines.</p>
+        </article>
+        <section class="main-content">
+            <article class="main-content-item">
+                <div class="main-content-banner">
+
+                </div>
+
+            </article>
+            <form class="main-content-item">
+
+            </form>
+        </section>
+    </main>
 </body>
 </html>
